# openAL_play_demo

./: CMakeLists.txt  LICENSE  main.cpp  music.pcm
